# flashcardsia

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .flake8  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  documents_class.py  main.py  models.py  schemas.py
backend/app/db/: populate.sql
backend/app/prompts/: __init__.py  flashcard_prompts.py
backend/app/services/: __init__.py  document_service.py  llm_service.py
frontend/: Dockerfile  README.md  env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: LoginModal.tsx  RegisterModal.tsx  UserMenu.tsx
frontend/src/config/: api.ts
frontend/src/pages/: FlashcardsPage.tsx  HomePage.tsx
